@@ -1,5 +1,11 @@
 # $Id$
 
+2006-10-19	Konstantin V. Arkhipov
+
+	* meta/types/TimeType.class.php,
+	core/Form/Primitives/PrimitiveTime.class.php: Time-primitive
+	introduced, Time-type is now supported by meta.
+
 2006-10-18	Konstantin V. Arkhipov
 
 	* core/DB/SQLite.class.php, core/DB/MySQL.class.php: duplicated
